  * Add new packages to GRML_FULL:
    - tgt: Linux target framework user-space tools
    - paperkey: extract just the secret information out ouf OpenPGP keys
    - gitpkg: helper scripts for maintaining packages with git
    - iscsitarget: iSCSI Enterprise Target userland tools
    - iscsitarget-module-2.6.22-grml: kernel module for iscsitarget
  * Set $HOSTNAME to according hostname via
    /etc/grml/fai/config/scripts/GRMLBASE/34-hosts
  * Adjust filename in header of /etc/grml/fai/config/scripts/GRMLBASE/*.
  * Use iceweasel/firefox as x-www-browser and w3m as www-browser (if
    available). 
  * Check for presence of the initrd.
  * Improve adjustment of suite for $FAI_DEBOOTSTRAP.

 -- Michael Prokop <mika@grml.org>  Thu, 04 Oct 2007 22:16:34 +0200

grml-live (0.0.3) unstable; urgency=low

  * Support for setting GRML_NAME (like grml vs. grml-small
    vs grml64 vs...)
  * Drop the character limits of $VERSION and $RELEASENAME.
  * Make sure $SECONDS is set before outputting the runtime.
  * Unify usage of i386_files, place all template files in
    directory templates now.
  * Improve portability of linux headers cleanup inside
    grml_cleanup_chroot.
  * Provide class GRML_SMALL and rename old GRML_SMALL into
    GRML_MEDIUM.
  * Do not install kernel via GRMLBASE but via GRML_* classes
    instead so we have only one single kernel on the system
    with something like 'GRMLBASE,GRML_SMALL,REMOVE_DOCS,I386'.
  * Use grml-live.log as logfile.
  * Added vim to GRML_MEDIUM package list.

 -- Michael Prokop <mika@grml.org>  Sun, 30 Sep 2007 12:58:15 +0200

grml-live (0.0.2) unstable; urgency=low

  * Add support for amd64.
  * Update and extend documentation.
  * Bugfix: Make sure $LOGDIR exists.
  * fai dirinstall: set hostname via $HOSTNAME

 -- Michael Prokop <mika@grml.org>  Fri, 21 Sep 2007 11:46:17 +0200

grml-live (0.0.1) unstable; urgency=low

  * Initial release.

 -- Michael Prokop <mika@grml.org>  Sat, 15 Sep 2007 15:35:34 +0200
