@@ -1,0 +1,4 @@
+TODO for autobuild infrastructure
+---------------------------------
+
+Unify scripts in a core configuration file.
