@@ -31,12 +31,13 @@ install: build
 	dh_testroot
 	dh_clean -k 
 	dh_installdirs etc/grml/fai/live-initramfs usr/sbin usr/share/doc/grml-live \
-	  	       usr/share/grml-live
+	  	       usr/share/grml-live usr/share/grml-live/examples
 
 	# Add here commands to install the package into debian/grml-live.
 	cp -a etc         debian/grml-live/
 	cp -a examples    debian/grml-live/usr/share/doc/grml-live/
 	cp -a templates   debian/grml-live/usr/share/grml-live/
+	cp -a buildd      debian/grml-live/usr/share/grml-live/examples/
 	install -o root -m 755 grml-live debian/grml-live/usr/sbin/grml-live
 
 # Build architecture-independent files here.
